ffi/poc/cpp/corpus/include/ak_abi.h

/* ABI v1 section 4: source code units -> UTF-8 into dst; returns bytes written or an error. */
typedef int32_t (*ak_transcode_fn)(const void *src, size_t len, uint8_t *dst, int32_t cap, ak_grow_fn grow, void *sink);
/* ABI v1 section 4, encode: a blob as DATA in the group. `len` counts SOURCE code units; `tc == NULL` means the field is ABSENT. */
struct ak_str {
  const void *data;
  size_t len;
  ak_transcode_fn tc;
};
typedef struct ak_str ak_str;
/* ABI v1 section 4, decode: an OFFSET into the buffer the host handed in. */
struct ak_span {
  uint32_t off;
  uint32_t len;
  uint32_t coder;
};
typedef struct ak_span ak_span;
/* Decision 11's unknown-field bag: two words, raw tag-and-value runs. */
struct ak_blob {
  const void *data;
  size_t len;
};
typedef struct ak_blob ak_blob;
/* Decision 11 (WP5 step 7): one message occurrence's unknown-field buffer, host memory the core copies the runs into. */
struct ak_unk_buf {
  void *data;
  uint32_t len;
  uint32_t cap;
};
typedef struct ak_unk_buf ak_unk_buf;
/* Encode group for `Timestamp`. */
struct ak_efix_Timestamp {
  int64_t seconds;
  int32_t nanos;
  uint32_t presence;
};
/* Decode group for `Timestamp`. */
struct ak_dfix_Timestamp {
  int64_t seconds;
  int32_t nanos;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Encode group for `Timestamp`.  With the unknown-field bag (decision 11 candidate). */
struct ak_ufix_Timestamp {
  int64_t seconds;
  int32_t nanos;
  struct ak_blob unknown;
  uint32_t presence;
};
/* Encode group for `Duration`. */
struct ak_efix_Duration {
  int64_t seconds;
  int32_t nanos;
  uint32_t presence;
};
/* Decode group for `Duration`. */
struct ak_dfix_Duration {
  int64_t seconds;
  int32_t nanos;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Encode group for `Duration`.  With the unknown-field bag (decision 11 candidate). */
struct ak_ufix_Duration {
  int64_t seconds;
  int32_t nanos;
  struct ak_blob unknown;
  uint32_t presence;
};
/* Encode group for `TaskOptions`. */
struct ak_efix_TaskOptions {
  struct ak_efix_Duration max_duration;
  int32_t max_retries;
  int32_t priority;
  struct ak_str partition_id;
  struct ak_str application_name;
  struct ak_str application_version;
  struct ak_str application_namespace;
  struct ak_str application_service;
  struct ak_str engine_type;
  uint32_t presence;
};
/* Decode group for `TaskOptions`. */
struct ak_dfix_TaskOptions {
  struct ak_dfix_Duration max_duration;
  int32_t max_retries;
  int32_t priority;
  struct ak_span partition_id;
  struct ak_span application_name;
  struct ak_span application_version;
  struct ak_span application_namespace;
  struct ak_span application_service;
  struct ak_span engine_type;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Encode group for `TaskOptions`.  With the unknown-field bag (decision 11 candidate). */
struct ak_ufix_TaskOptions {
  struct ak_ufix_Duration max_duration;
  int32_t max_retries;
  int32_t priority;
  struct ak_str partition_id;
  struct ak_str application_name;
  struct ak_str application_version;
  struct ak_str application_namespace;
  struct ak_str application_service;
  struct ak_str engine_type;
  struct ak_blob unknown;
  uint32_t presence;
};
/* Encode group for `TaskOutput`.  With the unknown-field bag (decision 11 candidate). */
struct ak_ufix_TaskOutput {
  uint8_t success;
  struct ak_str error;
  struct ak_blob unknown;
  uint32_t presence;
};
/* Encode group for `TaskDetailed`.  With the unknown-field bag (decision 11 candidate). */
struct ak_ufix_TaskDetailed {
  struct ak_str id;
  struct ak_str session_id;
  struct ak_str owner_pod_id;
  int32_t status;
  struct ak_str status_message;
  struct ak_ufix_TaskOptions options;
  struct ak_ufix_Timestamp created_at;
  struct ak_ufix_Timestamp submitted_at;
  struct ak_ufix_Timestamp started_at;
  struct ak_ufix_Timestamp ended_at;
  struct ak_ufix_Timestamp pod_ttl;
  struct ak_ufix_TaskOutput output;
  struct ak_str pod_hostname;
  struct ak_ufix_Timestamp received_at;
  struct ak_ufix_Timestamp acquired_at;
  struct ak_ufix_Duration creation_to_end_duration;
  struct ak_ufix_Duration processing_to_end_duration;
  struct ak_str initial_task_id;
  struct ak_ufix_Duration received_to_end_duration;
  struct ak_ufix_Timestamp processed_at;
  struct ak_ufix_Timestamp fetched_at;
  struct ak_str payload_id;
  struct ak_str created_by;
  struct ak_blob unknown;
  uint32_t presence;
};
#define AK_UFIX_TASKDETAILED_PRESENT_OPTIONS (1u << 0)
#define AK_UFIX_TASKDETAILED_PRESENT_CREATED_AT (1u << 1)
#define AK_UFIX_TASKDETAILED_PRESENT_SUBMITTED_AT (1u << 2)
#define AK_UFIX_TASKDETAILED_PRESENT_STARTED_AT (1u << 3)
#define AK_UFIX_TASKDETAILED_PRESENT_ENDED_AT (1u << 4)
#define AK_UFIX_TASKDETAILED_PRESENT_POD_TTL (1u << 5)
#define AK_UFIX_TASKDETAILED_PRESENT_OUTPUT (1u << 6)
#define AK_UFIX_TASKDETAILED_PRESENT_RECEIVED_AT (1u << 7)
#define AK_UFIX_TASKDETAILED_PRESENT_ACQUIRED_AT (1u << 8)
#define AK_UFIX_TASKDETAILED_PRESENT_CREATION_TO_END_DURATION (1u << 9)
#define AK_UFIX_TASKDETAILED_PRESENT_PROCESSING_TO_END_DURATION (1u << 10)
#define AK_UFIX_TASKDETAILED_PRESENT_RECEIVED_TO_END_DURATION (1u << 11)
#define AK_UFIX_TASKDETAILED_PRESENT_PROCESSED_AT (1u << 12)
#define AK_UFIX_TASKDETAILED_PRESENT_FETCHED_AT (1u << 13)
/* Encode group for `TaskSummary`. */
struct ak_efix_TaskSummary {
  struct ak_str id;
  struct ak_str session_id;
  struct ak_efix_TaskOptions options;
  int32_t status;
  struct ak_efix_Timestamp created_at;
  struct ak_str error;
  struct ak_str status_message;
  int64_t count_data_dependencies;
  uint32_t presence;
};
#define AK_EFIX_TASKSUMMARY_PRESENT_OPTIONS (1u << 0)
#define AK_EFIX_TASKSUMMARY_PRESENT_CREATED_AT (1u << 1)
/* Decode group for `TaskSummary`. */
struct ak_dfix_TaskSummary {
  struct ak_span id;
  struct ak_span session_id;
  struct ak_dfix_TaskOptions options;
  int32_t status;
  struct ak_dfix_Timestamp created_at;
  struct ak_span error;
  struct ak_span status_message;
  int64_t count_data_dependencies;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
#define AK_DFIX_TASKSUMMARY_PRESENT_OPTIONS (1u << 0)
#define AK_DFIX_TASKSUMMARY_PRESENT_CREATED_AT (1u << 1)
/* Encode group for `TaskSummary`.  With the unknown-field bag (decision 11 candidate). */
struct ak_ufix_TaskSummary {
  struct ak_str id;
  struct ak_str session_id;
  struct ak_ufix_TaskOptions options;
  int32_t status;
  struct ak_ufix_Timestamp created_at;
  struct ak_str error;
  struct ak_str status_message;
  int64_t count_data_dependencies;
  struct ak_blob unknown;
  uint32_t presence;
};
#define AK_UFIX_TASKSUMMARY_PRESENT_OPTIONS (1u << 0)
#define AK_UFIX_TASKSUMMARY_PRESENT_CREATED_AT (1u << 1)
/* Encode group for `Empty`. */
struct ak_efix_Empty {
  uint32_t presence;
};
/* Decode group for `Empty`. */
struct ak_dfix_Empty {
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Encode group for `Empty`.  With the unknown-field bag (decision 11 candidate). */
struct ak_ufix_Empty {
  struct ak_blob unknown;
  uint32_t presence;
};
/* Encode group for `Probe`. */
struct ak_efix_Probe {
  struct ak_str id;
  int32_t opt_count;
  struct ak_str opt_label;
  uint8_t opt_flag;
  uint32_t body_case;
  int64_t body_as_int;
  struct ak_str body_as_text;
  struct ak_str body_as_blob;
  struct ak_efix_Timestamp body_as_stamp;
  struct ak_efix_Empty body_as_nothing;
  uint32_t presence;
};
#define AK_EFIX_PROBE_PRESENT_OPT_COUNT (1u << 0)
#define AK_EFIX_PROBE_PRESENT_OPT_LABEL (1u << 1)
#define AK_EFIX_PROBE_PRESENT_OPT_FLAG (1u << 2)
/* Decode group for `Probe`. */
struct ak_dfix_Probe {
  struct ak_span id;
  int32_t opt_count;
  struct ak_span opt_label;
  uint8_t opt_flag;
  uint32_t body_case;
  int64_t body_as_int;
  struct ak_span body_as_text;
  struct ak_span body_as_blob;
  struct ak_dfix_Timestamp body_as_stamp;
  struct ak_dfix_Empty body_as_nothing;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
#define AK_DFIX_PROBE_PRESENT_OPT_COUNT (1u << 0)
#define AK_DFIX_PROBE_PRESENT_OPT_LABEL (1u << 1)
#define AK_DFIX_PROBE_PRESENT_OPT_FLAG (1u << 2)
/* Encode group for `Probe`.  With the unknown-field bag (decision 11 candidate). */
struct ak_ufix_Probe {
  struct ak_str id;
  int32_t opt_count;
  struct ak_str opt_label;
  uint8_t opt_flag;
  uint32_t body_case;
  int64_t body_as_int;
  struct ak_str body_as_text;
  struct ak_str body_as_blob;
  struct ak_ufix_Timestamp body_as_stamp;
  struct ak_ufix_Empty body_as_nothing;
  struct ak_blob unknown;
  uint32_t presence;
};
#define AK_UFIX_PROBE_PRESENT_OPT_COUNT (1u << 0)
#define AK_UFIX_PROBE_PRESENT_OPT_LABEL (1u << 1)
#define AK_UFIX_PROBE_PRESENT_OPT_FLAG (1u << 2)
/* Encode group for `UploadResultData`. */
struct ak_efix_UploadResultData {
  struct ak_str session_id;
  struct ak_str result_id;
  struct ak_str data_chunk;
  uint32_t presence;
};
/* Decode group for `UploadResultData`. */
struct ak_dfix_UploadResultData {
  struct ak_span session_id;
  struct ak_span result_id;
  struct ak_span data_chunk;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Encode group for `UploadResultData`.  With the unknown-field bag (decision 11 candidate). */
struct ak_ufix_UploadResultData {
  struct ak_str session_id;
  struct ak_str result_id;
  struct ak_str data_chunk;
  struct ak_blob unknown;
  uint32_t presence;
};
/* Encode group for `MetricsBatch`. */
struct ak_efix_MetricsBatch {
  struct ak_str id;
  uint32_t presence;
};